--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,3 +200,26 @@ gap: 10px;
     gap: 16px;
     margin-top: 40px;
 }
+.challenge{
+    background: rgba(247, 246, 242, 1);
+    border-radius: 12px;
+}
+.challenge-text{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    text-align: center;
+    padding: 80px 0;
+}
+.challenge-text h3{
+    font-size: 40px;
+    font-weight: 700;
+}
+.challenge-text p{
+    font-size: 16px;
+    color: rgba(98, 115, 130, 1);
+}
+.early{
+    margin-top: 10px;
+}
