--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,9 @@
     color: black;
     border-radius: 4px;
 }
-
+.nav-link li a:hover{
+    color:#30B868;
+}
 
 /* navbar related styles */
 nav{
@@ -40,6 +42,7 @@ nav{
     display: flex;
     align-items: center;
     gap: 32px;
+    
    
 }
 .nav-link li{
@@ -145,6 +148,10 @@ gap: 10px;
     gap: 16px;
     padding: 50px 30px;
 }
+.card:hover{
+    border: 2px solid #30B868;
+    border-radius: 10px;
+}
 .card h4{
     font-size: 24px;
     font-weight: 600;
@@ -236,7 +243,7 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 120px;
+    padding: 60px 0 30px 0;
 }
 footer hr{
     max-width: 80%;
@@ -249,4 +256,15 @@ footer p{
     font-size: 16px;
     text-align: center;
     padding-bottom: 30px;
+}
+.social ul{
+    display: flex;
+    gap: 4px;
+    margin-top: 7px;
+    list-style: none;
+
+}
+.social ul i{
+    cursor: pointer;
+    color: white;
 }
